deploy/storagemanager/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: storagemanager
  namespace: storage
spec:
  clusterIP: "None"
  selector:
    app: storagemanager
  ports:
  - name: storagemanager
    port: 8080
    targetPort: 8090
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-storagemanager
  namespace: storage
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: clusteragent.zcloud.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: storagemanager
          servicePort: 8080
